--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,16 @@
 PORT=3000
 DB_URL=my_db_url
 NODE_ENV=development
+
+PORT=3000
+DB_URL=
+NODE_ENV=development
+
+INNGEST_EVENT_KEY=
+INNGEST_SIGNING_KEY=
+
+STREAM_API_KEY=
+STREAM_API_SECRET=
+
+CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
